scrollbar fixed

--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,26 @@
     position: absolute;
     width: 100%;
   }
+
+// SCROLLBAR
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #080808; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #080808; 
+  }
+  
